--- a/app/src/main/res/layout/activity_classe_form.xml
+++ b/app/src/main/res/layout/activity_classe_form.xml
@@ -8,7 +8,7 @@
     tools:context=".activities.classes.ClasseFormActivity">
 
     <TextView
-        android:id="@+id/classe_form_tv"
+        android:id="@+id/cf_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.061" />
 
     <EditText
-        android:id="@+id/intitule_et"
+        android:id="@+id/cf_intitule_ctrl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
@@ -31,10 +31,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.751"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/classe_form_tv" />
+        app:layout_constraintTop_toBottomOf="@+id/cf_title_tv" />
 
     <EditText
-        android:id="@+id/promotion_et"
+        android:id="@+id/cf_promotion_ctrl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/textview_margintop_form"
@@ -43,10 +43,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.751"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/intitule_et" />
+        app:layout_constraintTop_toBottomOf="@+id/cf_intitule_ctrl" />
 
     <Button
-        android:id="@+id/caf_valider_btn"
+        android:id="@+id/cf_save_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="129dp"
@@ -55,12 +55,12 @@
         android:text="Création"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/caf_retour_btn"
+        app:layout_constraintEnd_toStartOf="@+id/cf_back_to_list_btn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/promotion_tv" />
+        app:layout_constraintTop_toBottomOf="@+id/cf_promotion_tv" />
 
     <Button
-        android:id="@+id/caf_retour_btn"
+        android:id="@+id/cf_back_to_list_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="128dp"
@@ -71,11 +71,11 @@
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/promotion_et"
+        app:layout_constraintTop_toBottomOf="@+id/cf_promotion_ctrl"
         app:layout_constraintVertical_bias="0.483" />
 
     <TextView
-        android:id="@+id/intitule_tv"
+        android:id="@+id/cf_intitule_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/textview_margin_form"
@@ -83,13 +83,13 @@
         android:layout_marginRight="@dimen/textview_margin_form"
         android:text="Intitulé :"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/intitule_et"
+        app:layout_constraintEnd_toStartOf="@+id/cf_intitule_ctrl"
         app:layout_constraintHorizontal_bias="0.281"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/classe_form_tv" />
+        app:layout_constraintTop_toBottomOf="@+id/cf_title_tv" />
 
     <TextView
-        android:id="@+id/promotion_tv"
+        android:id="@+id/cf_promotion_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/textview_margin_form"
@@ -97,10 +97,10 @@
         android:layout_marginRight="@dimen/textview_margin_form"
         android:text="Promotion :"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/promotion_et"
+        app:layout_constraintEnd_toStartOf="@+id/cf_promotion_ctrl"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/intitule_tv" />
+        app:layout_constraintTop_toBottomOf="@+id/cf_intitule_tv" />
 
 
 
