--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/m_cnam_iv"
         android:layout_width="369dp"
         android:layout_height="486dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -19,7 +19,7 @@
         app:srcCompat="@mipmap/ic_launcher_foreground" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/m_classes_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/acceder_annuaire"
