--- a/app/src/main/res/layout/activity_matiere_detail.xml
+++ b/app/src/main/res/layout/activity_matiere_detail.xml
@@ -8,7 +8,7 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/professeur_tv"
+        android:id="@+id/md_professeur_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/textview_margin_form"
@@ -16,13 +16,13 @@
         android:layout_marginRight="@dimen/textview_margin_form"
         android:text="Professeur :"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/professeur_et"
+        app:layout_constraintEnd_toStartOf="@+id/md_professeur_ctrl"
         app:layout_constraintHorizontal_bias="0.558"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_tv" />
+        app:layout_constraintTop_toBottomOf="@+id/md_description_tv" />
 
     <TextView
-        android:id="@+id/intitule_tv"
+        android:id="@+id/md_intitule_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/textview_margin_form"
@@ -30,13 +30,13 @@
         android:layout_marginRight="@dimen/textview_margin_form"
         android:text="Intitulé :"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/intitule_et"
+        app:layout_constraintEnd_toStartOf="@+id/md_intitule_ctrl"
         app:layout_constraintHorizontal_bias="0.181"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/matiere_form_detail" />
+        app:layout_constraintTop_toBottomOf="@+id/md_title_tv" />
 
     <TextView
-        android:id="@+id/description_tv"
+        android:id="@+id/md_description_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/textview_margin_form"
@@ -44,13 +44,13 @@
         android:layout_marginRight="@dimen/textview_margin_form"
         android:text="Description :"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/description_et"
+        app:layout_constraintEnd_toStartOf="@+id/md_description_ctrl"
         app:layout_constraintHorizontal_bias="0.536"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/intitule_tv" />
+        app:layout_constraintTop_toBottomOf="@+id/md_intitule_tv" />
 
     <EditText
-        android:id="@+id/intitule_et"
+        android:id="@+id/md_intitule_ctrl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
@@ -59,10 +59,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.74"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/matiere_form_detail" />
+        app:layout_constraintTop_toBottomOf="@+id/md_title_tv" />
 
     <EditText
-        android:id="@+id/description_et"
+        android:id="@+id/md_description_ctrl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
@@ -71,10 +71,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.74"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/intitule_et" />
+        app:layout_constraintTop_toBottomOf="@+id/md_intitule_ctrl" />
 
     <EditText
-        android:id="@+id/professeur_et"
+        android:id="@+id/md_professeur_ctrl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
@@ -84,10 +84,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.783"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_et" />
+        app:layout_constraintTop_toBottomOf="@+id/md_description_ctrl" />
 
     <Button
-        android:id="@+id/update_btn"
+        android:id="@+id/md_save_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -96,14 +96,14 @@
         android:text="Mettre à jour"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/delete_btn"
+        app:layout_constraintEnd_toStartOf="@+id/md_delete_btn"
         app:layout_constraintHorizontal_bias="0.348"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/professeur_et"
+        app:layout_constraintTop_toBottomOf="@+id/md_professeur_ctrl"
         app:layout_constraintVertical_bias="0.355" />
 
     <Button
-        android:id="@+id/delete_btn"
+        android:id="@+id/md_delete_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="28dp"
@@ -113,11 +113,11 @@
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/professeur_et"
+        app:layout_constraintTop_toBottomOf="@+id/md_professeur_ctrl"
         app:layout_constraintVertical_bias="0.355" />
 
     <Button
-        android:id="@+id/eef_retour_btn"
+        android:id="@+id/md_back_to_list_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="92dp"
@@ -131,7 +131,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/matiere_form_detail"
+        android:id="@+id/md_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
@@ -141,6 +141,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintVertical_bias="0.052" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
