--- a/app/src/main/res/layout/activity_matiere_form.xml
+++ b/app/src/main/res/layout/activity_matiere_form.xml
@@ -8,7 +8,7 @@
     tools:context=".activities.matieres.MatiereFormActivity">
 
     <TextView
-        android:id="@+id/matiere_form_tv"
+        android:id="@+id/mf_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.061" />
 
     <EditText
-        android:id="@+id/intitule_et"
+        android:id="@+id/mf_intitule_ctrl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
@@ -31,10 +31,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.751"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/matiere_form_tv" />
+        app:layout_constraintTop_toBottomOf="@+id/mf_title_tv" />
 
     <EditText
-        android:id="@+id/description_et"
+        android:id="@+id/mf_description_ctrl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/textview_margintop_form"
@@ -43,10 +43,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.751"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/intitule_et" />
+        app:layout_constraintTop_toBottomOf="@+id/mf_intitule_ctrl" />
 
     <EditText
-        android:id="@+id/professeur_et"
+        android:id="@+id/mf_professeur_ctrl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/textview_margintop_form"
@@ -55,10 +55,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.751"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_et" />
+        app:layout_constraintTop_toBottomOf="@+id/mf_description_ctrl" />
 
     <Button
-        android:id="@+id/eef_valider_btn"
+        android:id="@+id/mf_save_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="129dp"
@@ -66,12 +66,12 @@
         android:backgroundTint="@color/cnam"
         android:text="Création"
         android:textColor="@android:color/white"
-        app:layout_constraintEnd_toStartOf="@+id/eef_retour_btn"
+        app:layout_constraintEnd_toStartOf="@+id/mf_back_to_list_btn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/professeur_et" />
+        app:layout_constraintTop_toBottomOf="@+id/mf_professeur_ctrl" />
 
     <Button
-        android:id="@+id/eef_retour_btn"
+        android:id="@+id/mf_back_to_list_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="128dp"
@@ -81,10 +81,10 @@
         android:text="Retour"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/professeur_et" />
+        app:layout_constraintTop_toBottomOf="@+id/mf_professeur_ctrl" />
 
     <TextView
-        android:id="@+id/intitule_tv"
+        android:id="@+id/mf_intitule_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/textview_margin_form"
@@ -92,13 +92,13 @@
         android:layout_marginRight="@dimen/textview_margin_form"
         android:text="Intitulé :"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/intitule_et"
+        app:layout_constraintEnd_toStartOf="@+id/mf_intitule_ctrl"
         app:layout_constraintHorizontal_bias="0.281"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/matiere_form_tv" />
+        app:layout_constraintTop_toBottomOf="@+id/mf_title_tv" />
 
     <TextView
-        android:id="@+id/description_tv"
+        android:id="@+id/mf_description_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/textview_margin_form"
@@ -106,13 +106,13 @@
         android:layout_marginRight="@dimen/textview_margin_form"
         android:text="Description :"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/description_et"
+        app:layout_constraintEnd_toStartOf="@+id/mf_description_ctrl"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/intitule_tv" />
+        app:layout_constraintTop_toBottomOf="@+id/mf_intitule_tv" />
 
     <TextView
-        android:id="@+id/professeur_tv"
+        android:id="@+id/mf_professeur_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/textview_margin_form"
@@ -122,10 +122,10 @@
         android:text="Professeur :"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/professeur_et"
+        app:layout_constraintEnd_toStartOf="@+id/mf_professeur_ctrl"
         app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_tv"
+        app:layout_constraintTop_toBottomOf="@+id/mf_description_tv"
         app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
