--- a/app/src/main/res/layout/matiere_list_item.xml
+++ b/app/src/main/res/layout/matiere_list_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/matiere_list_item_rl"
+    android:id="@+id/mli_rl"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingStart="@dimen/padding_def"
