--- a/app/src/main/res/layout/matiere_list_item2.xml
+++ b/app/src/main/res/layout/matiere_list_item2.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/matiere2_list_item_rl"
+    android:id="@+id/mli2_rl"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingStart="@dimen/padding_def"
     android:paddingEnd="@dimen/padding_def">
 
     <TextView
-        android:id="@+id/mli_intitule_tv"
+        android:id="@+id/mli2_intitule_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -22,7 +22,7 @@
         android:textStyle="bold" />
 
     <CheckBox
-        android:id="@+id/matiere_checkbox"
+        android:id="@+id/mli2_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
