correction bug id ok

--- a/app/src/main/res/layout/activity_matiere_detail.xml
+++ b/app/src/main/res/layout/activity_matiere_detail.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -14,7 +13,7 @@
         android:layout_marginLeft="@dimen/textview_margin_form"
         android:layout_marginTop="68dp"
         android:layout_marginRight="@dimen/textview_margin_form"
-        android:text="Professeur :"
+        android:text="@string/professeur_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/md_professeur_ctrl"
         app:layout_constraintHorizontal_bias="0.558"
@@ -28,7 +27,7 @@
         android:layout_marginLeft="@dimen/textview_margin_form"
         android:layout_marginTop="96dp"
         android:layout_marginRight="@dimen/textview_margin_form"
-        android:text="Intitulé :"
+        android:text="@string/intitule_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/md_intitule_ctrl"
         app:layout_constraintHorizontal_bias="0.181"
@@ -42,7 +41,7 @@
         android:layout_marginLeft="@dimen/textview_margin_form"
         android:layout_marginTop="68dp"
         android:layout_marginRight="@dimen/textview_margin_form"
-        android:text="Description :"
+        android:text="@string/description_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/md_description_ctrl"
         app:layout_constraintHorizontal_bias="0.536"
@@ -54,8 +53,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
+        android:autofillHints=""
+        android:inputType="text"
         android:width="@dimen/edittextsize_form"
-        android:hint="Intitulé"
+        android:hint="@string/intitule_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.74"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,8 +67,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
+        android:autofillHints=""
+        android:inputType="text"
         android:width="@dimen/edittextsize_form"
-        android:hint="Description"
+        android:hint="@string/description_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.74"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,9 +81,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:layout_marginRight="@dimen/textview_margin_form"
+        android:layout_marginEnd="@dimen/textview_margin_form"
+        android:autofillHints=""
+        android:inputType="text"
         android:width="@dimen/edittextsize_form"
-        android:hint="Professeur"
+        android:hint="@string/professeur_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.783"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +98,7 @@
         android:layout_marginStart="8dp"
         android:width="@dimen/buttonsize_form"
         android:backgroundTint="@color/cnam"
-        android:text="Mettre à jour"
+        android:text="@string/valider_txt"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/md_delete_btn"
@@ -109,7 +114,7 @@
         android:layout_marginEnd="28dp"
         android:width="@dimen/buttonsize_form"
         android:backgroundTint="@color/cnam"
-        android:text="Supprimer"
+        android:text="@string/supprimer_txt"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +128,7 @@
         android:layout_marginBottom="92dp"
         android:width="@dimen/buttonsize_form"
         android:backgroundTint="@color/cnam"
-        android:text="Retour"
+        android:text="@string/retour_txt"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
