correction bug id ok

--- a/app/src/main/res/layout/activity_classe_detail.xml
+++ b/app/src/main/res/layout/activity_classe_detail.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,8 +11,8 @@
         android:layout_width="279dp"
         android:layout_height="61dp"
         android:padding="10dp"
-        android:text="CLASSE"
-        android:textSize="30dp"
+        android:text="@string/classe_txt"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -26,7 +25,9 @@
         android:layout_width="276dp"
         android:layout_height="44dp"
         android:layout_marginTop="72dp"
-        android:hint="Intitulé"
+        android:autofillHints=""
+        android:hint="@string/intitule_txt"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.009"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +38,9 @@
         android:layout_width="277dp"
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
-        android:hint="Promotion"
+        android:autofillHints=""
+        android:hint="@string/promotion_txt"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +52,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:clickable="true"
-        android:contentDescription="mise a jour"
+        android:contentDescription="@string/valider_txt"
+        android:focusable="true"
         app:backgroundTint="#FFA0A0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -64,7 +68,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
         android:clickable="true"
-        android:contentDescription="suppression"
+        android:contentDescription="@string/supprimer_txt"
+        android:focusable="true"
         app:backgroundTint="#FFA0A0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -78,7 +83,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:clickable="true"
-        android:contentDescription="retour page accueuil"
+        android:contentDescription="@string/retour_txt"
+        android:focusable="true"
         app:backgroundTint="#FFA0A0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -91,7 +97,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:contentDescription="ajout"
+        android:contentDescription="@string/add_txt"
+        android:focusable="true"
         app:backgroundTint="#FFA0A0"
         app:layout_constraintBottom_toBottomOf="@+id/cd_eleves_rv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +114,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
         android:clickable="true"
-        android:contentDescription="suppression"
+        android:contentDescription="@string/supprimer_txt"
+        android:focusable="true"
         app:backgroundTint="#FFA0A0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -132,8 +140,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Liste élèves"
-        android:textSize="20dp"
+        android:text="@string/eleves_txt"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -144,8 +152,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Liste matières"
-        android:textSize="20dp"
+        android:text="@string/matieres_txt"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -157,7 +165,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:contentDescription="ajout"
+        android:contentDescription="@string/add_txt"
+        android:focusable="true"
         app:backgroundTint="#FFA0A0"
         app:layout_constraintBottom_toBottomOf="@+id/cd_matieres_rv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -173,7 +182,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
         android:clickable="true"
-        android:contentDescription="suppression"
+        android:contentDescription="@string/supprimer_txt"
+        android:focusable="true"
         app:backgroundTint="#FFA0A0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
