--- a/app/src/main/res/layout/eleve_list_item2.xml
+++ b/app/src/main/res/layout/eleve_list_item2.xml
@@ -23,9 +23,9 @@
         android:id="@+id/eli2_prenom_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="115dp"
+        android:layout_marginStart="72dp"
         android:layout_marginEnd="0dp"
+        android:layout_toEndOf="@+id/eli2_nom_tv"
         android:paddingTop="@dimen/padding_def"
         android:paddingBottom="@dimen/padding_def"
         android:text="@string/prenom_txt"
@@ -38,6 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:layout_marginStart="144dp"
+        android:layout_toEndOf="@+id/eli2_prenom_tv" />
 
 </RelativeLayout>
