correction bug id ok

--- a/app/src/main/res/layout/activity_eleve_list2.xml
+++ b/app/src/main/res/layout/activity_eleve_list2.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/padding_def"
-        android:text="Liste élève"
+        android:text="@string/eleves_txt"
         android:textSize="@dimen/titlesize_def"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,6 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:contentDescription="@string/add_txt"
+        android:focusable="true"
         app:backgroundTint="#FFA0A0"
         app:layout_constraintBottom_toBottomOf="@+id/el2_title_tv"
         app:layout_constraintEnd_toEndOf="parent"
