--- a/app/src/main/res/layout/matiere_list_item2.xml
+++ b/app/src/main/res/layout/matiere_list_item2.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/mli2_intitule_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginEnd="0dp"
@@ -23,9 +23,9 @@
         android:id="@+id/mli2_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentEnd="false"
         android:layout_centerVertical="true"
-        android:layout_marginStart="267dp"
+        android:layout_marginStart="30dp"
         android:layout_toEndOf="@+id/mli2_intitule_tv" />
 
 
