correction bug id ok

--- a/app/src/main/res/layout/activity_classe_form.xml
+++ b/app/src/main/res/layout/activity_classe_form.xml
@@ -26,8 +26,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
+        android:autofillHints=""
+        android:inputType="text"
         android:width="@dimen/edittextsize_form"
-        android:hint="Intitulé"
+        android:hint="@string/intitule_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.751"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,8 +40,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/textview_margintop_form"
+        android:autofillHints=""
+        android:inputType="text"
         android:width="@dimen/edittextsize_form"
-        android:hint="Promotion"
+        android:hint="@string/promotion_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.751"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +71,7 @@
         android:layout_marginEnd="44dp"
         android:width="@dimen/buttonsize_form"
         android:backgroundTint="@color/cnam"
-        android:text="Retour"
+        android:text="@string/retour_txt"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +85,7 @@
         android:layout_marginLeft="@dimen/textview_margin_form"
         android:layout_marginTop="81dp"
         android:layout_marginRight="@dimen/textview_margin_form"
-        android:text="Intitulé :"
+        android:text="@string/intitule_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/cf_intitule_ctrl"
         app:layout_constraintHorizontal_bias="0.281"
@@ -95,7 +99,7 @@
         android:layout_marginLeft="@dimen/textview_margin_form"
         android:layout_marginTop="64dp"
         android:layout_marginRight="@dimen/textview_margin_form"
-        android:text="Promotion :"
+        android:text="@string/promotion_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/cf_promotion_ctrl"
         app:layout_constraintHorizontal_bias="0.477"
